# NikkeOptimizer

./: .gitignore  BACKLOG.md  CLAUDE.md  Promotion_Tournament_Match.pages  plan.md  pyproject.toml
scripts/: assumption_audit.md  build_lb_core_exemplars.py  calibrate_29.py  calibrate_sweep.py  calibrate_v2.py  diag_zero_dmg.py  monte_carlo_29.py  validate_beta_29_league.py  validate_event_loop.py  validate_eventloop_29.py  validate_kyushen.py
scripts/debug/: compare_lv_responses.py  (+7 more)
tests/: test_account_buffs.py  test_arena.py  test_arena_importer.py  test_auto_import.py  test_battle_records.py  test_champion_arena_match.py  test_crop_tool.py  test_csv_importer.py  test_csv_importer_v2.py  test_cube_importer.py  test_cube_warnings.py  test_delete_actions.py  test_doll_seed.py  test_genetic.py  test_icon_library.py  test_league_leaderboard.py  test_matcher_feedback.py  test_models.py  test_ocr.py  test_optimizer.py  test_optimizer_predicted_stats.py  test_optimizer_validation.py  test_promo_tournament_doll_match.py  test_promo_tournament_doll_vision.py  test_promo_tournament_ingest.py  test_promo_tournament_lb_core.py  test_promo_tournament_lb_core_audit.py  test_promo_tournament_ocr.py  test_promo_tournament_player_data_scrape.py  test_promo_tournament_player_data_sidecar.py  test_promo_tournament_player_match.py  test_promo_tournament_regions.py  test_prydwen_treasure_extractor.py  test_rookie_disconnect_outcome.py  test_roster_snapshot.py  test_scrapers.py  test_screenshot_router.py  test_seasons.py  test_session_grouping.py  test_shiftyspad_privacy.py  (+8 more)
(+181 files in other folders)
